--- a/user/templates/AddCompo.html
+++ b/user/templates/AddCompo.html
@@ -133,7 +133,25 @@
                                     <span class="required" aria-required="true"> * </span>
                                 </label>
                                 <div class="col-md-5">
-                                    <input type="number" class="form-control input-height" name="rate" id="rate">
+                                    <input type="number" class="form-control input-height" name="speech_rate" id="rate">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="control-label col-md-3">Voice Call API 
+                                    </label>
+                                <div class="col-md-5">
+                                    <div class="form-check">
+                                      <label class="form-check-label">
+                                        <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" >
+                                        SAR
+                                      </label>
+                                    </div>
+                                    <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2" value="option2">
+                                        OTHER
+                                      </label>
+                                    </div>
                                 </div>
                             </div>
 
@@ -159,9 +177,9 @@
 
         $('#api-provider').on("change", function(){
             var value = $(this).val();
-            var lang = $("#form_sample_1").children(".form-group")[5];
-            var gender = $("#form_sample_1").children(".form-group")[6];
-            var rate = $("#form_sample_1").children(".form-group")[7];
+            var lang = $("#form_sample_1").children(".form-group")[6];
+            var gender = $("#form_sample_1").children(".form-group")[7];
+            var rate = $("#form_sample_1").children(".form-group")[8];
             
             if (value == "Google"){
                 gender.style.display="none";
