--- a/user/templates/base.html
+++ b/user/templates/base.html
@@ -28,7 +28,7 @@
         <!-- favicon -->
         <link rel="shortcut icon" href="http://radixtouch.in/templates/admin/smart/source/assets/img/favicon.ico">
         <!-- jquery  -->
-        <link 
+        <link> 
     </head>
 <body>
     <!-- start js include path -->
@@ -52,7 +52,8 @@
     <script src="{% static 'assets/plugins/dropzone/dropzone.js' %}" ></script>
     <script src="{% static 'assets/plugins/dropzone/dropzone-call.js' %}" ></script>
     <!-- end js include path -->
-
+    <div class="jaymin" style="max-width: 99vw; padding: 1.5rem;">
     {% block content %}{% endblock  %}
+</div>
 </body>
 </html>
