--- a/static/assets/css/theme/light/theme_style.css
+++ b/static/assets/css/theme/light/theme_style.css
@@ -2595,7 +2595,7 @@ form.search-form-opened .btn.submit {
 }
 .page-bar {
     padding: 0;
-    background-color: #f1f4f7;
+    background-color: #eef1f5;
     margin-bottom: 25px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
