--- a/user/templates/AddCamp.html
+++ b/user/templates/AddCamp.html
@@ -1,5 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="page-bar">
+    <div class="page-title-breadcrumb">
+        <div class=" pull-left">
+            <div class="page-title">Add Campaign</div>
+        </div>
+        <ol class="breadcrumb page-breadcrumb pull-right">
+            <li><i class="fa fa-home"></i>&nbsp;<a class="parent-item" href="/dashboard">Home</a>&nbsp;<i class="fa fa-angle-right"></i>
+            </li>
+            <li class="active">Add Campaign</li>
+        </ol>
+    </div>
+</div>
 <div class="card card-box">
     <div class="card-head">
         <header>Campaign Details</header>
@@ -19,17 +31,10 @@
                 <input name='camp-name' type="text" class="form-control" id="simpleFormName">
             </div>
             <div class="form-group">
-                <label for="simpleFormPassword">Mobile Number</label>
-                <input name="phone-number" type="tel" class="form-control" id="simpleFormNum">
+                <label for="simpleFormPassword">Description</label>
+                <input name="desc" type="text-area" class="form-control" id="simpleFormNum">
             </div>
-            <div class="form-group">
-                <div class="checkbox checkbox-icon-black">
-                    <input id="rememberChk1" type="checkbox" checked="checked">
-                    <label for="rememberChk1">
-                        Remember me
-                    </label>
-                </div>
-            </div>
+            
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
