--- a/user/templates/dashboard.html
+++ b/user/templates/dashboard.html
@@ -10,12 +10,9 @@
                 </script>
             </div>
             <ol class="breadcrumb page-breadcrumb pull-right">
-                <li><i class="fa fa-home"></i>&nbsp;<a class="parent-item" href="index.html">Home</a>&nbsp;<i
+                <li><i class="fa fa-home"></i>&nbsp;<a class="parent-item" href="/dashboard">Home</a>&nbsp;<i
                         class="fa fa-angle-right"></i>
                 </li>
-                <li><a class="parent-item" href="#">Campaign</a>&nbsp;<i class="fa fa-angle-right"></i>
-                </li>
-                <li class="active">Library Assets</li>
             </ol>
         </div>
     </div>
@@ -47,6 +44,7 @@
                 </div>
 
                 <div class="card-body ">
+  
                     <div class="row">
                         <div class="col-md-6 col-sm-6 col-6">
                             <div class="btn-group">
@@ -57,6 +55,11 @@
                         </div>
                         <div class="col-md-6 col-sm-6 col-6">
                             <div class="btn-group pull-right">
+                                <div class="btn-group">
+                                    <a href="/settings" id="" class="btn btn-info">
+                                        settings
+                                   </a>
+                                </div>
                                 <a class="btn deepPink-bgcolor  btn-outline dropdown-toggle"
                                     data-toggle="dropdown">Tools
                                     <i class="fa fa-angle-down"></i>
@@ -75,6 +78,11 @@
                                             <i class="fa fa-file-excel-o"></i> Export to Excel </a>
                                     </li>
                                 </ul>
+                                <div class="btn-group">
+                                    <a href="/logout" id="" class="btn btn-warning">
+                                        Logout
+                                   </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -107,21 +115,32 @@
                                                 <th class="sorting_asc" tabindex="0" aria-controls="example4"
                                                     rowspan="1" colspan="1" aria-sort="ascending"
                                                     aria-label="#: activate to sort column descending"
-                                                    style="width: 63.6px;">#</th>
+                                                    style="width: 63.6px;"></th>
                                                 <th class="sorting" tabindex="0" aria-controls="example4" rowspan="1"
                                                     colspan="1" aria-label="Title: activate to sort column ascending"
                                                     style="width: 180.863px;">Name</th>
+                                                <th class="sorting" tabindex="0" aria-controls="example4" rowspan="1"
+                                                    colspan="1" aria-label="Title: activate to sort column ascending"
+                                                    style="width: 180.863px;">Description</th>
+                                                <th class="sorting" tabindex="0" aria-controls="example4" rowspan="1"
+                                                    colspan="1" aria-label="Title: activate to sort column ascending"
+                                                    style="width: 180.863px;">Records</th>
+                                                <th class="sorting" tabindex="0" aria-controls="example4" rowspan="1"
+                                                    colspan="1" aria-label="Title: activate to sort column ascending"
+                                                    style="width: 180.863px;">Status</th>
                                                 
                                             </tr>
                                         </thead>
                                         <tbody>
                                             {% for c in data %}
                                             <tr class="odd" role="row">
-                                                <td class="sorting_1">{{ c.id }}</td>
-                                                <td>{{ c.CampaignName }} 
-                                                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="/composerList?unique={{c.id}}"><button type="button" class="btn deepPink-bgcolor">Record</button></a> 
-                                                    &nbsp; <a href="/AddComposer?unique={{c.id}}"><button type="button" class="btn btn-success"><i class="fa fa-plus"></i> Add </button></a>
-                                                </td>
+                                                <td class="sorting_1"><input type="checkbox" name="{{ c.id }}" id=""></td>
+                                                <td>{{ c.CampaignName }} </td>
+                                                <td>{{ c.Description }} </td>
+                                                <td>{{ c.Description }} </td>
+                                                <td>{{ c.CampaignStatus }} </td>
+                                                <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="/composerList?unique={{c.id}}"><button type="button" class="btn deepPink-bgcolor">Record</button></a> 
+                                                    &nbsp; <a href="/AddComposer?unique={{c.id}}"><button type="button" class="btn btn-success"><i class="fa fa-plus"></i> Add </button></a></td>
                                             </tr>
                                             {% endfor %}
                                         </tbody>
