Forgot Password Remains

--- a/user/templates/dashboard.html
+++ b/user/templates/dashboard.html
@@ -137,7 +137,7 @@
                                                 <td class="sorting_1"><input type="checkbox" name="{{ c.id }}" id=""></td>
                                                 <td>{{ c.CampaignName }} </td>
                                                 <td>{{ c.Description }} </td>
-                                                <td>{{ c.Description }} </td>
+                                                <td>{{ c.record_count }} </td>
                                                 <td>{{ c.CampaignStatus }} </td>
                                                 <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="/composerList?unique={{c.id}}"><button type="button" class="btn deepPink-bgcolor">Record</button></a> 
                                                     &nbsp; <a href="/AddComposer?unique={{c.id}}"><button type="button" class="btn btn-success"><i class="fa fa-plus"></i> Add </button></a></td>
