--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -62,8 +62,8 @@
     </div>
     <div class="form formReset">
         <h2>Reset your password?</h2>
-        <form>
-            <input type="email" placeholder="Email Address" />
+        <form action="/resetPass/" method="POST">
+            <input type="email" placeholder="Email Address" name="email"/>
             <button>Send Verification Email</button>
         </form>
     </div>
